[project]
name = "pythonproject-14-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrievskis",email = "nnefedova1@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

